Tab-down overflow problem fixed

--- a/css/header.css
+++ b/css/header.css
@@ -228,7 +228,7 @@ header .inner #hidden-menu i {
 .tab-down-inner {
   /* 기본 */
   width: 100vw;
-  height: 0;
+  height: 230px;
 
   /* 텍스트 */
   color: white;
@@ -289,6 +289,20 @@ header .inner #hidden-menu i {
 }
 
 /* MEDIA QUERY */
+
+@media screen and (min-width: 1200px) {
+
+  #tab-down,
+  .tab-down-inner,
+  .tab-sign,
+  .tab-items,
+  .tab-items li,
+  .tab-items li a,
+  .tab-list {
+    width: 1200px;
+    margin-right: 0;
+  }
+}
 
 @media screen and (max-width: 1200px) {
   header .inner {
